// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redo_undo: change geometry prepare first step: set currentSceneTreeNode test redo operate test redo one step undo step which from first to zero, redo step which from zero to first 1`] = `
<article
  className="wonder-inspector-geometry"
>
  <div
    className="geometry-select"
  >
    Sphere
    <span
      className="select-title"
      onClick={[Function]}
    >
      select
    </span>
  </div>
</article>
`;

exports[`redo_undo: change geometry prepare first step: set currentSceneTreeNode test undo operate test not undo 1`] = `
<article
  className="wonder-inspector-geometry"
>
  <div
    className="geometry-select"
  >
    Sphere
    <span
      className="select-title"
      onClick={[Function]}
    >
      select
    </span>
  </div>
</article>
`;

exports[`redo_undo: change geometry prepare first step: set currentSceneTreeNode test undo operate test undo one step undo step which from first to zero 1`] = `
<article
  className="wonder-inspector-geometry"
>
  <div
    className="geometry-select"
  >
    Cube
    <span
      className="select-title"
      onClick={[Function]}
    >
      select
    </span>
  </div>
</article>
`;
